Practica_03/src/parser/y.output
   0  $accept : programa $end

   1  programa : definiciones DEF MAIN '(' ')' ':' VOID '{' '}'

   2  definiciones : definiciones definicion
   3               |

   4  definicion : def ';'
   5             | funcion

   6  funcion : DEF ID '(' params ')' ':' retorno '{' defs sentencias '}'

   7  retorno : tipo
   8          | VOID

   9  params :
  10         | param

  11  param : par
  12        | param ',' par

  13  par : ID ':' tipo

  14  defs :
  15       | defs def ';'

  16  def : ids ':' tipo

  17  ids : ID
  18      | ids ',' ID

  19  tipo : INT
  20       | DOUBLE
  21       | CHAR
  22       | '[' INT_CONSTANT ']' tipo
  23       | STRUCT '{' campos '}'

  24  campos : campo
  25         | campos campo

  26  campo : ids ':' tipo ';'

  27  sentencias :
  28             | expresion ';' sentencias

  29  expresion : ID
  30            | INT_CONSTANT
  31            | CHAR_CONSTANT
  32            | REAL_CONSTANT
  33            | expresion '+' expresion
  34            | expresion '*' expresion

state 0
	$accept : . programa $end  (0)
	definiciones : .  (3)

	.  reduce 3

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones . DEF MAIN '(' ')' ':' VOID '{' '}'  (1)
	definiciones : definiciones . definicion  (2)

	DEF  shift 3
	ID  shift 4
	.  error

	definicion  goto 5
	def  goto 6
	funcion  goto 7
	ids  goto 8


state 3
	programa : definiciones DEF . MAIN '(' ')' ':' VOID '{' '}'  (1)
	funcion : DEF . ID '(' params ')' ':' retorno '{' defs sentencias '}'  (6)

	ID  shift 9
	MAIN  shift 10
	.  error


state 4
	ids : ID .  (17)

	.  reduce 17


state 5
	definiciones : definiciones definicion .  (2)

	.  reduce 2


state 6
	definicion : def . ';'  (4)

	';'  shift 11
	.  error


state 7
	definicion : funcion .  (5)

	.  reduce 5


state 8
	def : ids . ':' tipo  (16)
	ids : ids . ',' ID  (18)

	':'  shift 12
	','  shift 13
	.  error


state 9
	funcion : DEF ID . '(' params ')' ':' retorno '{' defs sentencias '}'  (6)

	'('  shift 14
	.  error


state 10
	programa : definiciones DEF MAIN . '(' ')' ':' VOID '{' '}'  (1)

	'('  shift 15
	.  error


state 11
	definicion : def ';' .  (4)

	.  reduce 4


state 12
	def : ids ':' . tipo  (16)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 21


state 13
	ids : ids ',' . ID  (18)

	ID  shift 22
	.  error


state 14
	funcion : DEF ID '(' . params ')' ':' retorno '{' defs sentencias '}'  (6)
	params : .  (9)

	ID  shift 23
	')'  reduce 9

	params  goto 24
	param  goto 25
	par  goto 26


state 15
	programa : definiciones DEF MAIN '(' . ')' ':' VOID '{' '}'  (1)

	')'  shift 27
	.  error


state 16
	tipo : INT .  (19)

	.  reduce 19


state 17
	tipo : DOUBLE .  (20)

	.  reduce 20


state 18
	tipo : CHAR .  (21)

	.  reduce 21


state 19
	tipo : STRUCT . '{' campos '}'  (23)

	'{'  shift 28
	.  error


state 20
	tipo : '[' . INT_CONSTANT ']' tipo  (22)

	INT_CONSTANT  shift 29
	.  error


state 21
	def : ids ':' tipo .  (16)

	.  reduce 16


state 22
	ids : ids ',' ID .  (18)

	.  reduce 18


state 23
	par : ID . ':' tipo  (13)

	':'  shift 30
	.  error


state 24
	funcion : DEF ID '(' params . ')' ':' retorno '{' defs sentencias '}'  (6)

	')'  shift 31
	.  error


state 25
	params : param .  (10)
	param : param . ',' par  (12)

	','  shift 32
	')'  reduce 10


state 26
	param : par .  (11)

	.  reduce 11


state 27
	programa : definiciones DEF MAIN '(' ')' . ':' VOID '{' '}'  (1)

	':'  shift 33
	.  error


state 28
	tipo : STRUCT '{' . campos '}'  (23)

	ID  shift 4
	.  error

	ids  goto 34
	campos  goto 35
	campo  goto 36


state 29
	tipo : '[' INT_CONSTANT . ']' tipo  (22)

	']'  shift 37
	.  error


state 30
	par : ID ':' . tipo  (13)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 38


state 31
	funcion : DEF ID '(' params ')' . ':' retorno '{' defs sentencias '}'  (6)

	':'  shift 39
	.  error


state 32
	param : param ',' . par  (12)

	ID  shift 23
	.  error

	par  goto 40


state 33
	programa : definiciones DEF MAIN '(' ')' ':' . VOID '{' '}'  (1)

	VOID  shift 41
	.  error


state 34
	ids : ids . ',' ID  (18)
	campo : ids . ':' tipo ';'  (26)

	':'  shift 42
	','  shift 13
	.  error


state 35
	tipo : STRUCT '{' campos . '}'  (23)
	campos : campos . campo  (25)

	ID  shift 4
	'}'  shift 43
	.  error

	ids  goto 34
	campo  goto 44


state 36
	campos : campo .  (24)

	.  reduce 24


state 37
	tipo : '[' INT_CONSTANT ']' . tipo  (22)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 45


state 38
	par : ID ':' tipo .  (13)

	.  reduce 13


state 39
	funcion : DEF ID '(' params ')' ':' . retorno '{' defs sentencias '}'  (6)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	VOID  shift 46
	'['  shift 20
	.  error

	retorno  goto 47
	tipo  goto 48


state 40
	param : param ',' par .  (12)

	.  reduce 12


state 41
	programa : definiciones DEF MAIN '(' ')' ':' VOID . '{' '}'  (1)

	'{'  shift 49
	.  error


state 42
	campo : ids ':' . tipo ';'  (26)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 50


state 43
	tipo : STRUCT '{' campos '}' .  (23)

	.  reduce 23


state 44
	campos : campos campo .  (25)

	.  reduce 25


state 45
	tipo : '[' INT_CONSTANT ']' tipo .  (22)

	.  reduce 22


state 46
	retorno : VOID .  (8)

	.  reduce 8


state 47
	funcion : DEF ID '(' params ')' ':' retorno . '{' defs sentencias '}'  (6)

	'{'  shift 51
	.  error


state 48
	retorno : tipo .  (7)

	.  reduce 7


state 49
	programa : definiciones DEF MAIN '(' ')' ':' VOID '{' . '}'  (1)

	'}'  shift 52
	.  error


state 50
	campo : ids ':' tipo . ';'  (26)

	';'  shift 53
	.  error


state 51
	funcion : DEF ID '(' params ')' ':' retorno '{' . defs sentencias '}'  (6)
	defs : .  (14)

	.  reduce 14

	defs  goto 54


state 52
	programa : definiciones DEF MAIN '(' ')' ':' VOID '{' '}' .  (1)

	.  reduce 1


state 53
	campo : ids ':' tipo ';' .  (26)

	.  reduce 26


state 54
	funcion : DEF ID '(' params ')' ':' retorno '{' defs . sentencias '}'  (6)
	defs : defs . def ';'  (15)
	sentencias : .  (27)

	INT_CONSTANT  shift 55
	ID  shift 56
	REAL_CONSTANT  shift 57
	CHAR_CONSTANT  shift 58
	'}'  reduce 27

	def  goto 59
	sentencias  goto 60
	ids  goto 8
	expresion  goto 61


state 55
	expresion : INT_CONSTANT .  (30)

	.  reduce 30


state 56
	ids : ID .  (17)
	expresion : ID .  (29)

	'+'  reduce 29
	'*'  reduce 29
	':'  reduce 17
	';'  reduce 29
	','  reduce 17


state 57
	expresion : REAL_CONSTANT .  (32)

	.  reduce 32


state 58
	expresion : CHAR_CONSTANT .  (31)

	.  reduce 31


state 59
	defs : defs def . ';'  (15)

	';'  shift 62
	.  error


state 60
	funcion : DEF ID '(' params ')' ':' retorno '{' defs sentencias . '}'  (6)

	'}'  shift 63
	.  error


state 61
	sentencias : expresion . ';' sentencias  (28)
	expresion : expresion . '+' expresion  (33)
	expresion : expresion . '*' expresion  (34)

	'+'  shift 64
	'*'  shift 65
	';'  shift 66
	.  error


state 62
	defs : defs def ';' .  (15)

	.  reduce 15


state 63
	funcion : DEF ID '(' params ')' ':' retorno '{' defs sentencias '}' .  (6)

	.  reduce 6


state 64
	expresion : expresion '+' . expresion  (33)

	INT_CONSTANT  shift 55
	ID  shift 67
	REAL_CONSTANT  shift 57
	CHAR_CONSTANT  shift 58
	.  error

	expresion  goto 68


state 65
	expresion : expresion '*' . expresion  (34)

	INT_CONSTANT  shift 55
	ID  shift 67
	REAL_CONSTANT  shift 57
	CHAR_CONSTANT  shift 58
	.  error

	expresion  goto 69


state 66
	sentencias : expresion ';' . sentencias  (28)
	sentencias : .  (27)

	INT_CONSTANT  shift 55
	ID  shift 67
	REAL_CONSTANT  shift 57
	CHAR_CONSTANT  shift 58
	'}'  reduce 27

	sentencias  goto 70
	expresion  goto 61


state 67
	expresion : ID .  (29)

	.  reduce 29


state 68
	expresion : expresion . '+' expresion  (33)
	expresion : expresion '+' expresion .  (33)
	expresion : expresion . '*' expresion  (34)

	'*'  shift 65
	'+'  reduce 33
	';'  reduce 33


state 69
	expresion : expresion . '+' expresion  (33)
	expresion : expresion . '*' expresion  (34)
	expresion : expresion '*' expresion .  (34)

	.  reduce 34


state 70
	sentencias : expresion ';' sentencias .  (28)

	.  reduce 28


34 terminals, 17 nonterminals
35 grammar rules, 71 states
